# docs/swagger.json
@@ -9,7 +9,7 @@
         },
         "version": "1.0"
     },
-    "host": "wisestone-kpi.onrender.com",
+    "host": "localhost:8080",
     "basePath": "/",
     "paths": {
         "/api/v1/auth/login": {
@@ -1742,8 +1742,14 @@
                 "permission": {
                     "$ref": "#/definitions/models.ShortPermission"
                 },
+                "permission_id": {
+                    "type": "string"
+                },
                 "role": {
                     "$ref": "#/definitions/models.ShortRole"
+                },
+                "role_id": {
+                    "type": "string"
                 },
                 "role_uz": {
                     "type": "string"
